// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Join
</button>
`;

exports[`(2) Subscribed 1`] = `
<button
  className="btn btn-outline-primary"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Joined
</button>
`;

exports[`(3) With button props 1`] = `
<button
  className="btn btn-outline-primary btn-block"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Joined
</button>
`;
